--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,34 @@
+
 header ul li {
     display: inline;
+}
+* {
+    font-family: 'Times New Roman', Times, serif;
+    color: blue;
+    background-color: black;
+}
+table {
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
+    background-color: grey;
+}
+th, tr, td {
+    background-color: grey;
+}
+input {
+    background-color: white;
+}
+
+ul, li {
+    background-color: salmon;
+}
+h3 {
+    font-family: 'Calistoga', cursive;
+    color: green;
+}
+#logo {
+    height: 400px;
+}
+header li {
+    margin-left: 500px;
 }
